--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,15 @@ requires-python = ">=3.12"
 dependencies = [
     "faker>=37.3.0",
     "gymnasium>=1.1.1",
-    "ipykernel>=6.29.5",
     "numpy>=2.2.6",
     "pandas>=2.2.3",
+    "stable-baselines3[extra]>=2.6.0",
     "streamlit>=1.45.1",
+    "torch>=2.7.1",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+    "ipywidgets>=8.1.7",
 ]
